test/compile_errors/stage1/obj/use_anyopaque_as_return_type_of_fn_ptr.zig
export fn entry() void {
    const a: fn () anyopaque = undefined;
    _ = a;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:20: error: return type cannot be opaque
